@@ -24,7 +24,7 @@ namespace OnTheFlyCompiler
 			}
 			try
 			{
-				Core.Init(CompilerSettings.Parse(args));
+				Core.Init(Parse(args));
 				Core.Compiler.Compile();
 				Console.WriteLine(Core.Compiler.Output);
 				if (Core.Compiler.Settings.Execute)
@@ -39,6 +39,149 @@ namespace OnTheFlyCompiler
 				return;
 			}
 		}
+
+		static CompilerSettings Parse(string[] args)
+		{
+			CompilerSettings settings = new CompilerSettings();
+			for (int i = 0; i < args.Length; i++)
+			{
+				string name = args[i];
+				try
+				{
+					switch (name)
+					{
+						case "--debug":
+							{
+								settings.IncludeDebugInformation = true;
+								break;
+							}
+						case "--exe":
+							{
+								settings.GenerateExecutable = true;
+								break;
+							}
+						case "--exec":
+							{
+								settings.Execute = true;
+								break;
+							}
+						case "-f":
+							{
+								string[] arr = args[++i].Split(';');
+								foreach (string str in arr)
+								{
+									settings.Sources.Add(System.IO.File.ReadAllText(str));
+								}
+								break;
+							}
+						case "-l":
+							{
+								settings.Language = args[++i];
+								break;
+							}
+						case "--memory":
+							{
+								settings.GenerateInMemory = true;
+								break;
+							}
+						case "-n":
+							{
+								settings.MethodName = args[++i];
+								break;
+							}
+						case "-p":
+							{
+								settings.MethodPath = args[++i];
+								break;
+							}
+						case "-r":
+							{
+								string[] arr = args[++i].Split(';');
+								settings.ReferencedAssemblies.AddRange(arr);
+								break;
+							}
+						case "-s":
+							{
+								string[] arr = args[++i].Split(';');
+								settings.Sources.AddRange(arr);
+								break;
+							}
+						case "--threat":
+							{
+								settings.TreatWarningsAsErrors = true;
+								break;
+							}
+						case "-v":
+							{
+								int verbose = Convert.ToInt32(args[++i], CultureInfo.CurrentCulture);
+								if (verbose > 2)
+								{
+									throw new ParameterOutOfRangeException(name, verbose.ToString(CultureInfo.CurrentCulture));
+								}
+								else
+								{
+									settings.Verbose = verbose;
+								}
+								break;
+							}
+						case "-w":
+							{
+								try
+								{
+									int warning = Convert.ToInt32(args[++i], CultureInfo.CurrentCulture);
+									if (warning > 4)
+									{
+										throw new ParameterOutOfRangeException(name, warning.ToString(CultureInfo.CurrentCulture));
+									}
+									else
+									{
+										settings.WarningLevel = warning;
+									}
+								}
+								catch
+								{
+									throw new ParameterNotSetException(name);
+								}
+								break;
+							}
+						case "-x":
+							{
+								try
+								{
+									string xml = String.Empty;
+									System.Xml.XmlDocument doc = new System.Xml.XmlDocument();
+									try
+									{
+										xml = args[++i];
+										doc.Load(xml);
+										settings = CompilerSettings.Parse(doc);
+									}
+									catch
+									{
+										throw new ParameterOutOfRangeException(name, xml);
+									}
+								}
+								catch (NullReferenceException ex)
+								{
+									throw new ReadingXmlDescriptionException(ex);
+								}
+
+								break;
+							}
+						default:
+							{
+								throw new UnknownParameterException(name);
+							}
+					}
+				}
+				catch (IndexOutOfRangeException)
+				{
+					throw new ParameterNotSetException(name);
+				}
+			}
+			return settings;
+		}
+
 
 		static void PrintUsage()
 		{
